<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.akashbagade.hotel.FoodParcel">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#d7ccc8"
        android:text="@string/food_parcel"
        android:textColor="#003300"
        android:textAlignment="center"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/fpName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:hint="@string/full_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/fpEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fpMobileNo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:maxLength="10" />

    <EditText
        android:id="@+id/fpExpTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:hint="@string/expected_time"
        android:inputType="time"
        android:maxLength="5" />

    <Button
        android:id="@+id/fpsubmit"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/submit"
        android:textSize="25sp"
        android:textColor="#003300"
        android:onClick="onSubmit"/>
</LinearLayout>
