<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.akashbagade.hotel.Table_Booking">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="Table Booking"
        android:textColor="#003300"
        android:textAlignment="center"
        android:background="#d7ccc8"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/tbName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:hint="@string/full_name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/tbEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/tbPhone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:hint="@string/mobile_no"
        android:ems="10"
        android:maxLength="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/tbGuests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:hint="@string/number_of_guests"
        android:inputType="number" />

    <EditText
        android:id="@+id/tbTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:hint="@string/time"
        android:maxLength="5"
        android:inputType="time" />

    <EditText
        android:id="@+id/tbDate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:hint="@string/date"
        android:maxLength="10"
        android:inputType="date" />

    <Button
        android:id="@+id/tbSubmit"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:text="@string/submit"
        android:textColor="#003300"
        android:textSize="25sp"
        android:onClick="onSubmit"/>
</LinearLayout>
