<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Table_Booking3"
    android:background="#00BCD4"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:text="@string/MobVrfd"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#B2EBF2"/>

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MobRegTY"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/pay300"
        android:gravity="center"
        android:textColor="#000000"/>

    <Button
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/hdpay"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:text="@string/Pay"
        android:background="#90A4AE"/>



</LinearLayout>