<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.akashbagade.hotel.Banquet">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="Book Banquet"
        android:textAlignment="center"
        android:background="#d7ccc8"
        android:textColor="#003300"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/bbName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:hint="Full Name"
        android:textSize="20sp"/>

    <EditText
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:hint="@string/mobile_no"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.1"
        android:ems="10"
        android:maxLength="10"
        android:inputType="phone" />

    <EditText
        android:hint="@string/date"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.1"
        android:ems="10"
        android:maxLength="10"
        android:inputType="date" />

    <EditText
        android:hint="@string/time"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.1"
        android:ems="10"
        android:maxLength="5"
        android:inputType="time" />

    <EditText
        android:hint="@string/reason_for_booking"
        android:id="@+id/bbreason"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/bbSubmit"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:text="@string/submit"
        android:textColor="#003300"
        android:textSize="25sp" />
</LinearLayout>
