<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Banquet4"
    android:background="#039BE5"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:text="@string/ordConf"
        android:textColor="#5D4037"
        android:gravity="center"
        android:textSize="35sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:text="@string/paysuccess"
        android:textSize="30sp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:text="@string/back_home"
        android:background="#90A4AE"
        android:onClick="onbqBack"/>

</LinearLayout>